<resources>
    <string name="app_name">Genie Bin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_profile">Profile</string>
    <string name="login_title">Increase sustainability</string>
    <string name="login_button_label">Continue with Google</string>
    <string name="text_terms_and_conditions">By using our app, you agree to our <b><u>terms of service</u></b> &amp; <b><u>privacy policy</u></b></string>
    <string name="login_subtitle">Let\'s help you to dispose off waste in a fun and rewarding way. Creating a cleaner and more sustainable surrounding.</string>
    <string name="redeem">Redeem</string>
    <string name="title_summary">Summary</string>
    <string name="title_history">History</string>
    <string name="title_view_all">View All</string>
    <string name="no_records">No records</string>
    <string name="all_bins">All Bins</string>
    <string name="select_type_of_waste">Select type of waste</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enter_amount">Enter amount</string>
    <string name="wallet_service">Wallet Service</string>
    <string name="create_new">Create</string>
    <string name="connect_existing">Connect</string>
    <string name="proceed">Proceed</string>
    <string name="connect_wallet">Connect Wallet</string>
    <string name="please_enter_your_phrase_below">Please enter your phrase below</string>
    <string name="continue1">Continue</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="give_access">Give access</string>
    <string name="disconnect">Disconnect</string>
    <string name="dispose_session">Dispose Session</string>
    <string name="done">Done</string>
</resources>