<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.2"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/anim_bin"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textColor="@color/material_blue_grey_700"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login_subtitle"
        android:textAlignment="center"
        android:textColor="@color/material_blue_grey_600"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/material_blue_grey_050"
        android:paddingTop="16dp"
        android:paddingBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:stateListAnimator="@null"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login_button_label"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/material_blue_grey_700"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_google_logo"
        app:iconPadding="0dp"
        app:iconSize="25dp"
        app:iconTint="@null"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:text="@string/text_terms_and_conditions"
        android:textAlignment="center"
        />

    <WebView
        android:id="@+id/login_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>