<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:text="@string/dispose_session"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semibold"
                />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"
                android:textColor="@color/material_blue_grey_800"
                android:text="Please try to dispose within the time left"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_desc"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="30dp"
                android:textSize="18sp"
                android:textColor="@color/material_blue_grey_800"
                android:fontFamily="@font/poppins_semibold"
                android:textAlignment="center"
                android:text="05:40"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_timer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                >
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="15sp"
                    android:visibility="gone"
                    style="?android:attr/borderlessButtonStyle"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_dialog_button"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/material_light_blue_800"
                    />
                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:minHeight="40dp"
                    android:text="@string/done"
                    android:textSize="18sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:textAllCaps="false"
                    android:layout_marginStart="1dp"
                    android:background="@drawable/bg_dialog_button"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/material_light_blue_800"
                    />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>