<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:scrollbars="none"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="100dp"
                >
                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/round_account_circle_20"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_acc_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/cv_profile_image"
                app:layout_constraintBottom_toBottomOf="@id/cv_profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_profile_image"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0.5"
                >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="Bishyan Kar"
                    app:layout_constraintHorizontal_bias="0"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:fontFamily="@font/poppins_semibold"
                    />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="bk.harmonize.space@gmail.com"
                    android:textColor="@color/material_blue_grey_700"
                    android:textSize="12sp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppins_semibold"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cl_acc_info"
                app:layout_constraintStart_toStartOf="@+id/cl_acc_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_circlular_rectangle"
                android:elevation="2dp"
                >

                <ImageButton
                    android:id="@+id/iv_coin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_circle"
                    android:src="@drawable/ic_coin"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:stateListAnimator="@null"
                    />

                <TextView
                    android:id="@+id/tv_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="700"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/material_blue_grey_700"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_redeem"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    app:cornerRadius="20dp"
                    android:backgroundTint="@color/material_green_500"
                    android:textColor="@color/white"
                    android:text="@string/redeem"
                    android:textAllCaps="false"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cv_profile_image"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/title_summary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_summary"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                app:cardBackgroundColor="@color/material_green_300"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_scan_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cl_weight_meter"
                        >
                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_scan_count"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintVertical_bias="0.3"
                            app:cardCornerRadius="50dp"
                            android:layout_marginHorizontal="20dp"
                            >

                            <TextView
                                android:id="@+id/tv_scan_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="100"
                                android:textColor="@color/material_grey_800"
                                android:textStyle="bold"
                                />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/tv_scan_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@id/cv_scan_count"
                            app:layout_constraintEnd_toEndOf="@id/cv_scan_count"
                            app:layout_constraintTop_toBottomOf="@id/cv_scan_count"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="Total Scans"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_semibold"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_weight_meter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cl_scan_count"
                        app:layout_constraintEnd_toEndOf="parent"
                        >
                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_weight_meter"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintVertical_bias="0.3"
                            app:cardCornerRadius="50dp"
                            android:layout_marginHorizontal="20dp"
                            >

                            <TextView
                                android:id="@+id/tv_weight_meter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="100 kg"
                                android:textColor="@color/material_grey_800"
                                android:textStyle="bold"
                                />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/tv_weight_meter_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="@id/cv_weight_meter"
                            app:layout_constraintEnd_toEndOf="@id/cv_weight_meter"
                            app:layout_constraintTop_toBottomOf="@id/cv_weight_meter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="Weight Disposed"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_semibold"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_summary"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/title_history"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/tv_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_history_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_history_title"
                android:layout_marginHorizontal="30dp"
                android:text="@string/title_view_all"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/material_green_800"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/tv_history_title"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="12dp"
                tools:itemCount="8"
                tools:listitem="@layout/layout_item_history"
                />

            <TextView
                android:id="@+id/tv_history_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_history_title"
                android:text="@string/no_records"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_semibold"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="12dp"
                android:visibility="gone"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>